GladiusUnity2021/ModelImporter/Assets/Scripts/ANTLRgenerated/GladiusEncounterParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GladiusEncounter.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class GladiusEncounterParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, ID=19, WS=20, INT=21, FLOAT=22, OBR=23, CBR=24, COMMA=25, NL=26, 
		STRING=27, SINGLELINE_COMMENT=28;
	public const int
		RULE_root = 0, RULE_encounterName = 1, RULE_ursulaEase = 2, RULE_valensEase = 3, 
		RULE_prizeTier = 4, RULE_scene = 5, RULE_gridFile = 6, RULE_propsFile = 7, 
		RULE_music = 8, RULE_battleScript = 9, RULE_cameraTrack = 10, RULE_totalPop = 11, 
		RULE_crowdLevel = 12, RULE_candie = 13, RULE_cutscene = 14, RULE_team = 15, 
		RULE_school = 16, RULE_unitDB = 17;
	public static readonly string[] ruleNames = {
		"root", "encounterName", "ursulaEase", "valensEase", "prizeTier", "scene", 
		"gridFile", "propsFile", "music", "battleScript", "cameraTrack", "totalPop", 
		"crowdLevel", "candie", "cutscene", "team", "school", "unitDB"
	};

	private static readonly string[] _LiteralNames = {
		null, "'ENCOUNTERNAME:'", "'URSULAEASE:'", "'VALENSEASE:'", "'PRIZETIER'", 
		"'SCENE:'", "'GRIDFILE:'", "'PROPSFILE:'", "'MUSIC:'", "'BATTLESCRIPT:'", 
		"'CAMERATRACK:'", "'TOTALPOP:'", "'CROWDLEVEL:'", "'CANDIE:'", "'CUTSCENE:'", 
		"'NULL'", "'TEAM:'", "'SCHOOL:'", "'UNITDB:'", null, null, null, null, 
		"'{'", "'}'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "ID", "WS", "INT", "FLOAT", 
		"OBR", "CBR", "COMMA", "NL", "STRING", "SINGLELINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GladiusEncounter.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GladiusEncounterParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GladiusEncounterParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GladiusEncounterParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EncounterNameContext encounterName() {
			return GetRuleContext<EncounterNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SceneContext scene() {
			return GetRuleContext<SceneContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GridFileContext gridFile() {
			return GetRuleContext<GridFileContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UrsulaEaseContext ursulaEase() {
			return GetRuleContext<UrsulaEaseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValensEaseContext valensEase() {
			return GetRuleContext<ValensEaseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrizeTierContext[] prizeTier() {
			return GetRuleContexts<PrizeTierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrizeTierContext prizeTier(int i) {
			return GetRuleContext<PrizeTierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropsFileContext propsFile() {
			return GetRuleContext<PropsFileContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MusicContext music() {
			return GetRuleContext<MusicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CameraTrackContext[] cameraTrack() {
			return GetRuleContexts<CameraTrackContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CameraTrackContext cameraTrack(int i) {
			return GetRuleContext<CameraTrackContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BattleScriptContext battleScript() {
			return GetRuleContext<BattleScriptContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TotalPopContext totalPop() {
			return GetRuleContext<TotalPopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CrowdLevelContext crowdLevel() {
			return GetRuleContext<CrowdLevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CutsceneContext[] cutscene() {
			return GetRuleContexts<CutsceneContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CutsceneContext cutscene(int i) {
			return GetRuleContext<CutsceneContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CandieContext candie() {
			return GetRuleContext<CandieContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TeamContext[] team() {
			return GetRuleContexts<TeamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TeamContext team(int i) {
			return GetRuleContext<TeamContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36;
			encounterName();
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 37;
				ursulaEase();
				}
			}

			State = 41;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 40;
				valensEase();
				}
			}

			State = 46;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3) {
				{
				{
				State = 43;
				prizeTier();
				}
				}
				State = 48;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 49;
			scene();
			State = 50;
			gridFile();
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 51;
				propsFile();
				}
			}

			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 54;
				music();
				}
			}

			State = 60;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 57;
				cameraTrack();
				}
				}
				State = 62;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 64;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 63;
				battleScript();
				}
			}

			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 66;
				totalPop();
				}
			}

			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__11) {
				{
				State = 69;
				crowdLevel();
				}
			}

			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__13) {
				{
				{
				State = 72;
				cutscene();
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__12) {
				{
				State = 78;
				candie();
				}
			}

			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 81;
				team();
				}
				}
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__15 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EncounterNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusEncounterParser.STRING, 0); }
		public EncounterNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_encounterName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterEncounterName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitEncounterName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEncounterName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EncounterNameContext encounterName() {
		EncounterNameContext _localctx = new EncounterNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_encounterName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(T__0);
			State = 87;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UrsulaEaseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusEncounterParser.INT, 0); }
		public UrsulaEaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ursulaEase; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterUrsulaEase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitUrsulaEase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUrsulaEase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UrsulaEaseContext ursulaEase() {
		UrsulaEaseContext _localctx = new UrsulaEaseContext(Context, State);
		EnterRule(_localctx, 4, RULE_ursulaEase);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(T__1);
			State = 90;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValensEaseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusEncounterParser.INT, 0); }
		public ValensEaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valensEase; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterValensEase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitValensEase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValensEase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValensEaseContext valensEase() {
		ValensEaseContext _localctx = new ValensEaseContext(Context, State);
		EnterRule(_localctx, 6, RULE_valensEase);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(T__2);
			State = 93;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrizeTierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusEncounterParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusEncounterParser.INT, 0); }
		public PrizeTierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prizeTier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterPrizeTier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitPrizeTier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrizeTier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrizeTierContext prizeTier() {
		PrizeTierContext _localctx = new PrizeTierContext(Context, State);
		EnterRule(_localctx, 8, RULE_prizeTier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			Match(T__3);
			State = 96;
			Match(STRING);
			State = 97;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SceneContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusEncounterParser.STRING, 0); }
		public SceneContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scene; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterScene(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitScene(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScene(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SceneContext scene() {
		SceneContext _localctx = new SceneContext(Context, State);
		EnterRule(_localctx, 10, RULE_scene);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			Match(T__4);
			State = 100;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GridFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusEncounterParser.STRING, 0); }
		public GridFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gridFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterGridFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitGridFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGridFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GridFileContext gridFile() {
		GridFileContext _localctx = new GridFileContext(Context, State);
		EnterRule(_localctx, 12, RULE_gridFile);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			Match(T__5);
			State = 103;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropsFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusEncounterParser.STRING, 0); }
		public PropsFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propsFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterPropsFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitPropsFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropsFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropsFileContext propsFile() {
		PropsFileContext _localctx = new PropsFileContext(Context, State);
		EnterRule(_localctx, 14, RULE_propsFile);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			Match(T__6);
			State = 106;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MusicContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusEncounterParser.STRING, 0); }
		public MusicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_music; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterMusic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitMusic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMusic(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MusicContext music() {
		MusicContext _localctx = new MusicContext(Context, State);
		EnterRule(_localctx, 16, RULE_music);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			Match(T__7);
			State = 109;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BattleScriptContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusEncounterParser.STRING, 0); }
		public BattleScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_battleScript; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterBattleScript(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitBattleScript(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBattleScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BattleScriptContext battleScript() {
		BattleScriptContext _localctx = new BattleScriptContext(Context, State);
		EnterRule(_localctx, 18, RULE_battleScript);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(T__8);
			State = 112;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CameraTrackContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(GladiusEncounterParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(GladiusEncounterParser.STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(GladiusEncounterParser.COMMA, 0); }
		public CameraTrackContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cameraTrack; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterCameraTrack(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitCameraTrack(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCameraTrack(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CameraTrackContext cameraTrack() {
		CameraTrackContext _localctx = new CameraTrackContext(Context, State);
		EnterRule(_localctx, 20, RULE_cameraTrack);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(T__9);
			State = 115;
			Match(STRING);
			State = 116;
			Match(COMMA);
			State = 117;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TotalPopContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusEncounterParser.INT, 0); }
		public TotalPopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_totalPop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.EnterTotalPop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusEncounterListener typedListener = listener as IGladiusEncounterListener;
			if (typedListener != null) typedListener.ExitTotalPop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusEncounterVisitor<TResult> typedVisitor = visitor as IGladiusEncounterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTotalPop(this);
			else return visitor.VisitChildren(this);
		}
	}
